ingress/tomcat/tomcat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myreplica
  labels:
    app: tomcat
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 2
      maxUnavailable: 0
  selector: 
    matchLabels:
      app: myapp
  template:
    metadata:
      name: tomcat-2
      labels:
        app: myapp
    spec:
      containers: 
        - name: tomcat-container
          image: tomcat:8.0
---
apiVersion: v1
kind: Service
metadata: 
  name: tomcat
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - name: port
      protocol: TCP
      port: 8085
      targetPort: 8080
