ingress/tomcat/ingress-tomcat-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /helloworld
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8085
